unpackaged/main/default/objects/simplesms__Conversation_Filter__c/simplesms__Conversation_Filter__c.object-meta.xml
<CustomObject>
    <label>Conversation Filter</label>
    <nameField>
        <label>Conversation Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversation Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>