unpackaged/main/default/objects/simplesms__Conversation_Filter__c/fields/simplesms__Display__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Display__c</fullName>
    <label>Display</label>
    <length>80</length>
    <type>Text</type>
</CustomField>