unpackaged/main/default/objects/simplesms__Conversation_Filter__c/fields/simplesms__Number__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Number__c</fullName>
    <label>Number(s)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>