unpackaged/main/default/objects/simplesms__Conversation_Filter__c/fields/simplesms__Shared_Globally__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Shared_Globally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to All Users?</label>
    <type>Checkbox</type>
</CustomField>