unpackaged/main/default/objects/simplesms__Conversation_Filter__c/fields/simplesms__SObject_ListView_Id__c.field-meta.xml
<CustomField>
    <fullName>simplesms__SObject_ListView_Id__c</fullName>
    <label>SObject ListView Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>