unpackaged/main/default/objects/simplesms__Conversation_Filter__c/fields/simplesms__Status__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Status__c</fullName>
    <label>Status(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>